2000-04-11  Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c.c:
	(gnome_vfs_xfer_uri), (gnome_vfs_xfer_uri_internal),
	(handle_name_conflicts):
	Fixed problems with using "Skip" during a move/copy conflict.
	The first problem was that a skip flag wasn't being checked properly.
	The second, bigger problem, was that the handle_name_conflicts
	had no good way of telling the rest of the copy engine that
	a given file was skipped. Now it gets a copy of the source/
	targe item lists and optionally removes the items the user 
	chose to skip.

2000-04-11  John Sullivan <sullivan@eazel.com>

	* modules/file-method.c:
	(do_get_file_info): statbuf was passed to set_mime_type
	uninitialized. Fixed by passing &statbuf to get_stat_info,
	which was obviously the original intention.

2000-04-11  Darin Adler  <darin@eazel.com>

	* libgnomevfs/gnome-vfs-backend.c (gnome_vfs_async_create_uri):
	Added another missing async. cover routine.

2000-04-06  Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	* libgnomevfs/gnome-vfs-types.h:
	Fixed up the copy engine.
	Added an option to create duplicate items with the help of
	the progress_callback.
	Worked around a problem where calling progress_callback in async
	mode was causing context switches each time and degreaded performance.
	For now made it only call the callback every 200 ms for cases where
	response is not important. This will get reworked eventually.
	(progress_set_source_target_names), (progress_set_source_target_uris),
	(call_progress), (call_progress_uri), (call_progress_often),
	(call_progress_with_uris_often):
	Added a bunch of convenience calls for calling the progress callback.
	(gnome_vfs_visit_list):
	Convenience call to iterate a base uri and a list of name, similar to
	the visit directory calls.
	(count_items_and_size):
	New preflight call - calculates the sum and total size of copied files.
	Made all preflight operations call progress_info and be interruptible.
	(handle_name_conflicts):